Add null-safety annotations